                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 24-09-2006 fixed: choppy playback in dvr-ms files for asf demuxer (update from mplayerhq)
  - 17-09-2006 fixed: better handling of mpegs that don't have a start pts of 0
  - 17-09-2006 fixed: some video's would not return current time, even thou they had total time and current percentage
  - 17-09-2006 fixed: rewind on some movies would just lock picture untill a fastforward request was made
  - 17-09-2006 added: support for udp:// protocol, can only be used for targeted streaming directly to the xbox
  - 04-09-2006 fixed: mplayer would crash if total time was requested from an avi where decoding of video had failed
  - 13-08-2006 added: demux_aac.c from mplayerhq and content-type detection for shoutcast streams
  - 13-08-2006 updated: libfaad2, demux_aac to mplayerhq version (aac+)
  - 08-08-2006 updated: demux_asf to mplayerhq version, allows dvr-ms files to be played in a better way
  - 05-04-2006 fixed: odml index wouldn't be read for > 2.0gb files (http://thread.gmane.org/gmane.comp.video.mplayer.devel/31404)
  - 26-03-2006 fixed: dts frames with uneven data size would play garbled using hwdts output
  - 25-03-2006 added: ability to cancel vobsub parsing
  - 25-03-2006 fixed: switching from srt -> vobsub wouldn't reset spudec, nor osd
  - 06-02-2006 fixed: http.c authentication fix
  - 03-02-2006 added: support for slave command sub_load/sub_remove. supports loading any text subtitle format after start
  - 02-02-2006 fixed: audio stream in some avi's wouldn't be detected. mplayerhq:asfheader.c:1.43
  - 09-01-2006 added: additional fourcc codes in codec.conf